2007-02-15  Tobias Schlueter  <tobi@gcc.gnu.org>

	PR fortran/30478
	* decl.c (create_enum_history, gfc_free_enum_history): Formatting
	fixes.
	(add_init_expr_to_sym): Remove ENUM-specific code-path.
	(variable_decl): Likewise.  Formatting fix.
	(match_attr_spec): Remove ENUM-specific codepath.
	(gfc_match_enum): Fix typo in error message.
	(enumerator_decl): New.
	(gfc_match_enumerator_def): Strip down to code necessary for
	ENUMs, use enumerator_decl.

2007-02-13  Release Manager

	* GCC 4.1.2 released.

2007-02-10  Bernhard Fischer  <aldot@gcc.gnu.org>

	Backport from trunk
	PR fortran/24783
	* resolve.c (resolve_variable): Get the implicit type from the
	symbols namespace rather than the default namespace. Fix whitespace.
	(resolve_formal_arglist, resolve_equivalence): Fix typo.

2007-01-27  Steven Bosscher  <stevenb.gcc@gmail.com>
            Steven G. Kargl <kargl@gcc.gnu.org>

	PR fortran/30278
	* fortran/io.c (next_char): Deal with backslash escaped characters.
	Issue warnings in non -std=gnu cases.
	* fortran/primary.c (next_string_char): Issue warnings in non

2007-01-24  Roger Sayle  <roger@eyesopen.com>

	* trans-intrinsic.c (gfc_conv_intrinsic_sign): Call gfc_evaluate_now
	to prevent re-evaluation of first operand.

2006-12-25  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/30200
	* trans-io.c (build_dt): Move post block for format_expr to end.

2006-12-13  Steven G. Kargl  <kargl@gcc.gnu.org>

	Revert Paul Thomas' commit from 2006-12-09

2006-12-09  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/29821
	* resolve.c (resolve_operator): Only return result of
	gfc_simplify_expr if expression is constant.

	PR fortran/29912
	* trans-expr.c (gfc_trans_arrayfunc_assign): Return NULL if the
	lhs and rhs character lengths are not constant and equal for
	character array valued functions.

	PR fortran/29916
	* resolve.c (resolve_symbol): Allow host-associated variables
	in the specification expression of an array-valued function.