@@ -1,3 +1,8 @@
+2007-02-15  Steven G. Kargl  <kargl@gcc.gnu.org>
+
+	PR fortran/30799
+	* gfortran.dg/logical_2.f90: New test.
+
 2007-02-15  Alexandre Oliva  <aoliva@redhat.com>
 
 	* g++.dg/tree-ssa/sra-1.C: New.
