@@ -1,3 +1,9 @@
+2007-02-15  Steven G. Kargl  <kargl@gcc.gnu.org>
+
+	PR fortran/30799
+	* primary.c (match_logical_constant): Return MATCH_ERROR on invalid
+	kind.
+
 2007-02-15  Tobias Schlueter  <tobi@gcc.gnu.org>
 
 	PR fortran/30478
